# aidi-1100

./: AIDI1100Readme.md  Assignment1.md  Assignment2.md  Makefile  README.md  prototype_scrapping.ipynb  pyproject.toml  requirements.txt
Assignments/: Assignment2.md  Final_exam.md  inclassdemoforecasting.ipynb
Assignments/Assignment 3/: Research_Classifier.md  Research_Forcasting.md
Assignments/Assignment_3/: Developement.md  Research_Classifier.md  Research_Forcasting.md
Assignments/Project/: project_instructions.md
app/: main.py  requirements.txt  run.sh
lecture_material/: README.md  Week4.ipynb  Week6.ipynb
